[package]
name = "teo-language-server-wasm"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.87"
wasm-logger = { version = "0.2.0", optional = true }
pest = "2.7.3"
pest_derive = "2.7.3"
colored = "2.0.4"
pathdiff = "0.2.1"
once_cell = "1.18.0"
maplit = "1.0.2"
array_tool = "1.0.3"
snailquote = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4.31", features = ["serde"] }
regex = "1.9.5"
bigdecimal = "=0.3.1"
bson = { version = "2.6.0", features = ["chrono-0_4", "serde_with"] }
getrandom = { version = "0.2.10", features = ["js"] }
indexmap = "2.0.0"
itertools = "0.11.0"
path-clean = "1.0.1"