[package]
name = "teo-language-server-wasm"
description = "TEO language server WASM implementation"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0"
homepage = "https://teocloud.io"
documentation = "https://teocloud.io/docs"
repository = "https://github.com/teocloud/teo-language-server-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.87"
wasm-logger = { version = "0.2.0", optional = true }
teo-parser = { path = "../teo-parser" }