[package]
name = "teo-language-server-wasm"
description = "TEO language server WASM implementation"
version = "0.2.5"
edition = "2021"
license = "Apache-2.0"
homepage = "https://teocloud.io"
documentation = "https://teocloud.io/docs"
repository = "https://github.com/teocloud/teo-language-server-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
teo-parser = { path = "../teo-parser" }
wasm-bindgen = "0.2"
wasm-logger = { version = "0.2", optional = true }
console_error_panic_hook = "0.1"
serde = "1.0"
serde-wasm-bindgen = "0.6"
once_cell = "1.19"